[gd_scene load_steps=53 format=2]

[ext_resource path="res://assets/ending/aending0 (1).png" type="Texture" id=1]
[ext_resource path="res://assets/ending/aending0 (2).png" type="Texture" id=2]
[ext_resource path="res://assets/ending/aending0 (3).png" type="Texture" id=3]
[ext_resource path="res://assets/ending/aending0 (4).png" type="Texture" id=4]
[ext_resource path="res://assets/ending/aending0 (6).png" type="Texture" id=5]
[ext_resource path="res://assets/ending/aending0 (5).png" type="Texture" id=6]
[ext_resource path="res://assets/ending/sprite_06.png" type="Texture" id=7]
[ext_resource path="res://assets/ending/sprite_14.png" type="Texture" id=8]
[ext_resource path="res://assets/ending/sprite_04.png" type="Texture" id=9]
[ext_resource path="res://assets/ending/sprite_00.png" type="Texture" id=10]
[ext_resource path="res://scripts/Ending.gd" type="Script" id=11]
[ext_resource path="res://assets/ending/sprite_02.png" type="Texture" id=12]
[ext_resource path="res://assets/ending/aending0 (7).png" type="Texture" id=13]
[ext_resource path="res://assets/ending/aending0 (8).png" type="Texture" id=14]
[ext_resource path="res://assets/ending/sprite_05.png" type="Texture" id=15]
[ext_resource path="res://assets/ending/sprite_07.png" type="Texture" id=16]
[ext_resource path="res://assets/ending/sprite_09.png" type="Texture" id=17]
[ext_resource path="res://assets/ending/sprite_08.png" type="Texture" id=18]
[ext_resource path="res://assets/ending/sprite_10.png" type="Texture" id=19]
[ext_resource path="res://assets/ending/sprite_11.png" type="Texture" id=20]
[ext_resource path="res://assets/ending/sprite_01.png" type="Texture" id=21]
[ext_resource path="res://assets/ending/sprite_12.png" type="Texture" id=22]
[ext_resource path="res://assets/ending/sprite_13.png" type="Texture" id=23]
[ext_resource path="res://assets/ending/sprite_03.png" type="Texture" id=24]
[ext_resource path="res://assets/ending/sprite_30.png" type="Texture" id=25]
[ext_resource path="res://assets/ending/sprite_34.png" type="Texture" id=26]
[ext_resource path="res://assets/ending/sprite_26.png" type="Texture" id=27]
[ext_resource path="res://assets/ending/sprite_18.png" type="Texture" id=28]
[ext_resource path="res://assets/ending/sprite_17.png" type="Texture" id=29]
[ext_resource path="res://assets/ending/sprite_28.png" type="Texture" id=30]
[ext_resource path="res://assets/ending/sprite_29.png" type="Texture" id=31]
[ext_resource path="res://assets/ending/sprite_27.png" type="Texture" id=32]
[ext_resource path="res://assets/ending/sprite_23.png" type="Texture" id=33]
[ext_resource path="res://assets/ending/sprite_15.png" type="Texture" id=34]
[ext_resource path="res://assets/ending/sprite_16.png" type="Texture" id=35]
[ext_resource path="res://assets/ending/sprite_19.png" type="Texture" id=36]
[ext_resource path="res://assets/ending/sprite_37.png" type="Texture" id=37]
[ext_resource path="res://assets/ending/sprite_20.png" type="Texture" id=38]
[ext_resource path="res://assets/ending/sprite_25.png" type="Texture" id=39]
[ext_resource path="res://assets/ending/sprite_32.png" type="Texture" id=40]
[ext_resource path="res://assets/ending/sprite_35.png" type="Texture" id=41]
[ext_resource path="res://assets/ending/sprite_39.png" type="Texture" id=42]
[ext_resource path="res://assets/ending/sprite_36.png" type="Texture" id=43]
[ext_resource path="res://assets/ending/sprite_22.png" type="Texture" id=44]
[ext_resource path="res://assets/ending/sprite_21.png" type="Texture" id=45]
[ext_resource path="res://assets/ending/sprite_31.png" type="Texture" id=46]
[ext_resource path="res://assets/ending/sprite_33.png" type="Texture" id=47]
[ext_resource path="res://assets/ending/sprite_38.png" type="Texture" id=48]
[ext_resource path="res://assets/ending/sprite_24.png" type="Texture" id=49]
[ext_resource path="res://assets/fonts/myfont.tres" type="DynamicFont" id=50]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 1 ), ExtResource( 2 ), ExtResource( 3 ), ExtResource( 4 ), ExtResource( 6 ), ExtResource( 5 ), ExtResource( 13 ), ExtResource( 14 ), ExtResource( 10 ), ExtResource( 21 ), ExtResource( 12 ), ExtResource( 24 ), ExtResource( 9 ), ExtResource( 15 ), ExtResource( 7 ), ExtResource( 16 ), ExtResource( 18 ), ExtResource( 17 ), ExtResource( 19 ), ExtResource( 20 ), ExtResource( 22 ), ExtResource( 23 ), ExtResource( 8 ), ExtResource( 34 ), ExtResource( 35 ), ExtResource( 29 ), ExtResource( 28 ), ExtResource( 36 ), ExtResource( 38 ), ExtResource( 45 ), ExtResource( 44 ), ExtResource( 33 ), ExtResource( 49 ), ExtResource( 39 ), ExtResource( 27 ), ExtResource( 32 ), ExtResource( 30 ), ExtResource( 31 ), ExtResource( 25 ), ExtResource( 46 ), ExtResource( 40 ), ExtResource( 47 ), ExtResource( 26 ), ExtResource( 41 ), ExtResource( 43 ), ExtResource( 37 ), ExtResource( 48 ), ExtResource( 42 ) ],
"loop": false,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="ImageTexture" id=2]

[node name="Ending" type="AnimatedSprite"]
position = Vector2( 449, 447 )
scale = Vector2( 0.85, 0.85 )
frames = SubResource( 1 )
speed_scale = 0.5
script = ExtResource( 11 )

[node name="FinalScore" type="Label" parent="."]
margin_left = -512.0
margin_top = -512.0
margin_right = -443.0
margin_bottom = -498.0
custom_fonts/font = ExtResource( 50 )
text = "Final Score: 000"

[node name="End" type="Button" parent="."]
visible = false
margin_left = 205.882
margin_top = 442.353
margin_right = 512.882
margin_bottom = 510.353
custom_fonts/font = ExtResource( 50 )
text = "RE?????"
icon = SubResource( 2 )
flat = true

[connection signal="animation_finished" from="." to="." method="_on_Ending_animation_finished"]
[connection signal="pressed" from="End" to="." method="_on_Button_pressed"]
